--- a/css/style.css
+++ b/css/style.css
@@ -93,21 +93,25 @@ body {
 
 #topleft {
     background-color: rgb(0, 107, 62);
+    /* background-color: rgb(0, 233, 136); */
     border-radius: 250px 0 0 0;
 }
 
 #topright {
     background-color: rgb(151, 0, 33);
+    /* background-color: rgb(255, 0, 55); */
     border-radius: 0 250px 0 0;
 }
 
 #bottomleft {
     background-color: rgb(133, 113, 1);
+    /* background-color: rgb(255, 217, 0); */
     border-radius: 0 0 0 250px;
 }
 
 #bottomright {
     background-color: rgb(0, 59, 107);
+    /* background-color: rgb(0, 138, 252); */
     border-radius: 0 0 250px 0;
 }
 
